--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             </nav>
         </header>
     <div id="wrapper">
+        <h1>South Bays Leading Service For Home Music Lessons!</h1>
+        <p>Try a free lesson now!</p>
         <form action="https://www.freecodecamp.com/email-submit" method="post">
             <input required id="email" type="email" placeholder="Enter your email" />
             <input type="submit" id="submit" />
